opus: Decode table of contents (TOC) byte. (#111)

--- a/symphonia-codec-opus/Cargo.toml
+++ b/symphonia-codec-opus/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.0.1"
 description = "Pure Opus decoder (a part of project Symphonia)."
 homepage = "https://github.com/pdeljanov/Symphonia"
 repository = "https://github.com/pdeljanov/Symphonia"
-authors = ["Philip Deljanov <philip.deljanov@gmail.com>"]
+authors = ["Philip Deljanov <philip.deljanov@gmail.com>", "Darius Tan <dariustancode@gmail.com>"]
 license = "MPL-2.0"
 readme = "README.md"
 categories = ["multimedia", "multimedia::audio", "multimedia::encoding"]
