--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,7 +61,7 @@ jobs:
       matrix:
         config:
           - { os: ubuntu-latest, target: x86_64-unknown-linux-gnu, use-cross: false }
-          - { os: macos-latest, target: x86_64-apple-darwin, use-cross: false }
+          - { os: macos-latest, target: aarch64-apple-darwin, use-cross: false }
           - { os: windows-latest, target: x86_64-pc-windows-msvc, use-cross: false }
           - { os: ubuntu-latest, target: powerpc-unknown-linux-gnu, use-cross: true }
 
